fix: fix issue with horizontal scrolling in the products page

--- a/src/Pages/Product/assets/Product.css
+++ b/src/Pages/Product/assets/Product.css
@@ -1,5 +1,6 @@
 .custom-height {
     overflow-y: scroll;
+    overflow-x: hidden;
     height: calc(100vh - 274px);
     scroll-behavior: smooth;
 }
